# fit-check-prioritizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: agent_prompt.md  topsis_method.md
examples/: example_matrix.json
schemas/: fit_check_topsis.schema.json
scripts/: csv_to_matrix.py  sensitivity.py  topsis.py  validate_matrix.py
skills/fit-check-topsis/: SKILL.md  skill.json
templates/: criteria_template.csv  options_template.csv  scores_template.csv  sheet_layout.md
tests/: test_topsis.py
